# TableInterpolation

./: README.md
examples/: ThermistorInterpolationLookupTable.h
include/TableInterpolation/: LinearInterpolator.h
tests/: .gitignore  CMakeLists.txt  CompileOptions.cmake  Sanitizers.cmake  googletest
tests/source/: cnl  test_LinearInterpolator.cpp
